@@ -3,6 +3,9 @@
         * Version 1.6.0 released
         ========================
 
+        Rename GCTAResponseIrf::lo_save_thres() and GCTAResponseIrf::hi_save_thres()
+          to GCTAResponseIrf::lo_safe_thres() and GCTAResponseIrf::hi_safe_thres()
+          (#2716)
         Add generic CTA response cache (#2715)
         Fix precision issue with GCTABackground3D Monte-Carlo simulations (#2708)
         Revise GCTAEdisp class interface (#2704) 
@@ -10,7 +13,8 @@
         Protect GCTAInstDir from access to invalid information (#2694)
         Implement general CTA background model (#2694)
         Fix bug that potentially wrote the wrong exposure time in a PHA file (#2683)
-        Correct handling of stacked On/Off observations without background IRF (#2683)
+        Correct handling of stacked On/Off observations without background IRF
+          (#2683)
         Fix OpenMP bug in GObservations::likelihood::eval (#2678)
         Define GCTACubeBackground for energy boundaries instead of nodes (#2677) 
         Remove setting of effective area energy boundaries from "LO_THRES" and
